feat: annotation for report controller
